# deadwood

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: deadwood_sessions.json
src/deadwood/: __init__.py  __main__.py  cli.py  data.py  flags.py  level.py  progress.py  server.py  ui.py  web.py
src/deadwood/art/: banner.txt
src/deadwood/levels/: __init__.py  l01_first_blood.py  l02_whispers.py  l03_the_ledger.py  l03_the_telegraph.py  l04_back_door.py  l04_the_strongbox.py  l05_the_bouncer.py  l05_the_telegraph.py  l06_sleight_of_hand.py  l06_the_bouncer.py  l07_back_door.py  l07_the_cipher.py  l08_dead_mans_hand.py  l08_the_watchman.py  l09_sleight_of_hand.py  l09_the_vault.py  l10_the_gauntlet.py  l11_the_cipher.py  l12_the_annex.py  l13_dead_mans_hand.py  l14_the_vault.py  l15_the_whole_hand.py  l_the_annex.py  l_the_gauntlet.py  l_the_whole_hand.py
tests/: test_flags.py  test_levels.py  test_progress.py  test_realism.py  test_server.py  test_world.py
